<resources>
    <string name="app_name">Cinemin</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi a pellentesque metus. Aliquam tempor ultricies nulla, vel consectetur metus tempor id. Ut scelerisque dui quis mattis fermentum. Donec at condimentum neque. Praesent in risus felis. Donec vitae leo ac orci dapibus luctus ut at nibh. Vivamus eu ipsum maximus, luctus tellus id, euismod libero. Ut rutrum, eros at tincidunt cursus, lacus nisi semper mi, at tempor orci dui non purus. In odio nunc, porta in elit ut, facilisis euismod purus. Quisque aliquet dolor ac ligula molestie, vitae feugiat velit aliquet. Vivamus tincidunt justo in ante aliquam, nec iaculis diam mollis. Curabitur posuere posuere dolor in condimentum.
        \n\nNunc eleifend leo ante, sed interdum lectus ornare eget. Ut pellentesque sem at congue ullamcorper. Proin ac est consectetur, lobortis sem eget, rutrum massa. Nunc fermentum, nunc vel commodo porttitor, nisl tellus commodo diam, in posuere diam ex nec magna. Maecenas venenatis aliquet commodo. In ut tortor malesuada, viverra eros sit amet, egestas felis. Donec eleifend elit ut dolor malesuada pharetra.
    </string>

    <string name="lorem_ipsum_short">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi a pellentesque metus. Aliquam tempor ultricies nulla, vel consectetur metus tempor id. Ut scelerisque dui quis mattis fermentum. Donec at condimentum neque. Praesent in risus felis. Donec vitae leo ac orci dapibus luctus ut at nibh. Vivamus eu ipsum maximus, luctus tellus id, euismod libero. Ut rutrum, eros at tincidunt cursus, lacus nisi semper mi, at tempor orci dui non purus.
    </string>


    <string name="na">N/A</string>
    <string name="search_hint">Search…</string>

    <string name="key_release">Release:\u0020</string>
    <string name="key_director">Director:\u0020</string>
    <string name="key_runtime">Runtime:\u0020</string>
    <string name="key_rating">Rating:\u0020</string>
    <string name="key_budget">Budget:\u0020</string>
    <string name="key_revenue">Revenue:\u0020</string>

    <string name="format_release">Release: %s</string>
    <string name="format_runtime">%s min</string>
    <string name="format_in_dollars_overlay">In %s dollars</string>

    <string name="start_typing_hint">Just start typing the title of the movie you want and we\'ll find information about it for you 😉</string>
    <string name="error_no_result">Unfortunately we cannot find the movie you are searching for 😔</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>

    <string name="about_description">Cinemin App shows various information about movies and calculates their budget and revenue in 2020 dollars according to the inflation and purchasing power. This allows you to see the change in budget or box office of a film and compare multiple films made in different years by their real price. </string>
    <string name="about_version">App Version: %s</string>
    <string name="about_title">About App</string>
    <string name="about_app_support">App Support</string>
    <string name="about_email">madlessdev@gmail.com</string>
    <string name="about_email_selector_title">Select app</string>
    <string name="about_attribution">Attribution</string>
    <string name="about_tmdb_attribution">
        <![CDATA[
            This product uses the TMDb API but is not endorsed or certified by TMDb. For more information visit <a href="https://https://www.themoviedb.org/">https://www.themoviedb.org</a>
        ]]>
    </string>
    <string name="about_flaticon_attribution">
        <![CDATA[
            Icons made by <a href="https://www.flaticon.com/authors/fjstudio" title="fjstudio">fjstudio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
        ]]>
    </string>
    <string name="about_pixabay_attribution">
        <![CDATA[
            Background image from <a href="https://www.pixabay.com/" title="Pixabay">www.pixabay.com</a>
        ]]>
    </string>

    <string name="popup_error">Error</string>
    <string name="popup_ok">OK</string>
    <string name="popup_something_went_wrong">Something went wrong 😢</string>
</resources>