<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/DetailsToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        android:scaleType="matrix"
        android:src="@drawable/img_posters_blurred"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/descriptionLayout"
                style="@style/CardViewDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding_double"
                android:layout_marginTop="@dimen/default_padding_double"
                android:layout_marginEnd="@dimen/default_padding_double"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="visible"
                app:contentPadding="@dimen/default_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_cinemin" />

                        <TextView
                            android:id="@+id/appNameTextView"
                            style="@style/TextPlain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/default_padding_half"
                            android:text="@string/app_name"
                            android:textSize="@dimen/font_app_title" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/descriptionTextView"
                        style="@style/TextPlain"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/default_padding_half"
                        android:text="@string/about_description"
                        android:textSize="@dimen/font_medium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tmdbAttributionLayout"
                style="@style/CardViewDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding_double"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding_double"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="visible"
                app:contentPadding="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tmdbAttributionTextView"
                        style="@style/TextPlain"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/font_medium_small"
                        tools:text="@string/about_tmdb_attribution" />

                    <TextView
                        android:id="@+id/flaticonAttributionTextView"
                        style="@style/TextPlain"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/default_padding_half"
                        android:textSize="@dimen/font_medium_small"
                        tools:text="@string/about_flaticon_attribution" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/supportLayout"
                style="@style/CardViewDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding_double"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding_double"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="visible"
                app:contentPadding="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tmdbAttributionLayout">

                <TextView
                    android:id="@+id/emailTextView"
                    style="@style/TextPlain"
                    android:gravity="center"
                    android:text="@string/about_app_support"
                    android:textColor="@color/colorAccentText" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/privacyPolicyLayout"
                style="@style/CardViewDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding_double"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding_double"
                android:layout_marginBottom="@dimen/default_padding_double"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="visible"
                app:contentPadding="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/supportLayout">

                <TextView
                    android:id="@+id/privacyPolicyTextView"
                    style="@style/TextPlain"
                    android:gravity="center"
                    android:text="@string/about_privacy_policy"
                    android:textColor="@color/colorAccentText" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>