<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/img_posters" />

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_double"
        android:layout_marginTop="@dimen/search_top_margin"
        android:layout_marginEnd="@dimen/default_padding_double"
        android:background="@drawable/bg_round_corners"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/default_padding_half"
        android:paddingTop="@dimen/search_vertical_padding"
        android:paddingEnd="@dimen/default_padding_half"
        android:paddingBottom="@dimen/search_vertical_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/searchImageView"
            android:layout_width="@dimen/toolbar_search_icon_size"
            android:layout_height="@dimen/toolbar_search_icon_size"
            android:src="@drawable/ic_search" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchEditText"
            style="@style/FontSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_half"
            android:layout_marginEnd="@dimen/default_padding_half"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search_hint"
            android:inputType="textCapWords"
            android:textSize="@dimen/font_medium"
            android:visibility="visible" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moviesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_padding_double"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding_double"
        android:layoutAnimation="@anim/layout_animation_down_to_up"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/hintLayout"
        style="@style/CardViewDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_double"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding_double"
        android:visibility="visible"
        app:contentPadding="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout">

        <TextView
            style="@style/TextPlain"
            android:gravity="center"
            android:text="@string/start_typing_hint" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/errorLayout"
        style="@style/CardViewDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_double"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding_double"
        android:visibility="gone"
        app:contentPadding="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout">

        <TextView
            style="@style/TextPlain"
            android:gravity="center"
            android:text="@string/error_no_result" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>