<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/placeholderBackgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="matrix"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/movieBackgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movieConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipToPadding="false"
            android:focusable="true"
            android:paddingBottom="@dimen/default_padding_double">

            <androidx.cardview.widget.CardView
                android:id="@+id/posterCardView"
                style="@style/CardViewDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding_double"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/posterImageView"
                    android:layout_width="140dp"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/moneyDetailsCardView"
                style="@style/CardViewDefault"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/default_padding_half"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding_half"
                app:layout_constraintBottom_toTopOf="@id/weightedMoneyDetailsCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterCardView"
                app:layout_constraintTop_toTopOf="@id/posterCardView"
                app:layout_constraintVertical_bias="0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingTop="@dimen/default_padding_half"
                    android:paddingEnd="@dimen/default_padding"
                    android:paddingBottom="@dimen/default_padding_half">

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/budgetLayout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:alignContent="stretch"
                        app:alignItems="stretch"
                        app:flexWrap="wrap"
                        app:justifyContent="space_between"
                        app:layout_constraintBottom_toTopOf="@id/revenueLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/TextMoney.Key"
                            android:text="@string/key_budget" />

                        <TextView
                            android:id="@+id/budgetTextView"
                            style="@style/TextMoney.Budget"
                            tools:text="125 000 000 USD" />

                    </com.google.android.flexbox.FlexboxLayout>

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/revenueLayout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:alignContent="stretch"
                        app:alignItems="stretch"
                        app:flexWrap="wrap"
                        app:justifyContent="space_between"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/budgetLayout">

                        <TextView
                            style="@style/TextMoney.Key"
                            android:text="@string/key_revenue" />

                        <TextView
                            android:id="@+id/revenueTextView"
                            style="@style/TextMoney.Revenue"
                            tools:text="976 475 550 USD" />

                    </com.google.android.flexbox.FlexboxLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/moneyDetailsOverlayView"
                style="@style/CardViewDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPadding="@dimen/default_padding_quarter"
                app:layout_constraintBottom_toTopOf="@id/moneyDetailsCardView"
                app:layout_constraintEnd_toEndOf="@id/moneyDetailsCardView"
                app:layout_constraintStart_toStartOf="@id/moneyDetailsCardView"
                app:layout_constraintTop_toTopOf="@id/moneyDetailsCardView">

                <TextView
                    android:id="@+id/moneyDetailsOverlayTextView"
                    style="@style/TextPlain"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/default_padding_half"
                    android:paddingEnd="@dimen/default_padding_half"
                    android:textSize="@dimen/font_small"
                    android:textStyle="bold"
                    tools:text="@string/format_in_dollars_overlay" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weightedMoneyDetailsCardView"
                style="@style/CardViewDefault"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/default_padding_half"
                android:layout_marginTop="@dimen/default_padding_half"
                android:layout_marginEnd="@dimen/default_padding"
                app:layout_constraintBottom_toBottomOf="@id/posterCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterCardView"
                app:layout_constraintTop_toBottomOf="@id/moneyDetailsCardView"
                app:layout_constraintVertical_bias="0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingTop="@dimen/default_padding_half"
                    android:paddingEnd="@dimen/default_padding"
                    android:paddingBottom="@dimen/default_padding_half">

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/weightedBudgetLayout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:alignContent="stretch"
                        app:alignItems="stretch"
                        app:flexWrap="wrap"
                        app:justifyContent="space_between"
                        app:layout_constraintBottom_toTopOf="@id/weightedRevenueLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/TextMoney.Key"
                            android:text="@string/key_budget" />

                        <TextView
                            android:id="@+id/weightedBudgetTextView"
                            style="@style/TextMoney.Budget"
                            tools:text="125 000 000 USD" />

                    </com.google.android.flexbox.FlexboxLayout>

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/weightedRevenueLayout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:alignContent="stretch"
                        app:alignItems="stretch"
                        app:flexWrap="wrap"
                        app:justifyContent="space_between"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/weightedBudgetLayout">

                        <TextView
                            style="@style/TextMoney.Key"
                            android:text="@string/key_revenue" />

                        <TextView
                            android:id="@+id/weightedRevenueTextView"
                            style="@style/TextMoney.Revenue"
                            tools:text="976 475 550 USD" />

                    </com.google.android.flexbox.FlexboxLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weightedMoneyDetailsOverlayView"
                style="@style/CardViewDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPadding="@dimen/default_padding_quarter"
                app:layout_constraintBottom_toTopOf="@id/weightedMoneyDetailsCardView"
                app:layout_constraintEnd_toEndOf="@id/weightedMoneyDetailsCardView"
                app:layout_constraintStart_toStartOf="@id/weightedMoneyDetailsCardView"
                app:layout_constraintTop_toTopOf="@id/weightedMoneyDetailsCardView">

                <TextView
                    android:id="@+id/weightedMoneyDetailsOverlayTextView"
                    style="@style/TextPlain"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/default_padding_half"
                    android:paddingEnd="@dimen/default_padding_half"
                    android:textSize="@dimen/font_small"
                    android:textStyle="bold"
                    tools:text="@string/format_in_dollars_overlay" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/movieDetailsLayout"
                style="@style/CardViewDefault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                app:contentPadding="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/posterCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleTextView"
                        style="@style/TextMovieDetailsTitle"
                        tools:text="Harry Potter and the Philosopher's Stone" />

                    <TextView
                        android:id="@+id/releaseTextView"
                        style="@style/TextMovieDetails"
                        tools:text="Release: 2018-02-16" />

                    <TextView
                        android:id="@+id/directorTextView"
                        style="@style/TextMovieDetails"
                        tools:text="Director: N. Nolan" />

                    <TextView
                        android:id="@+id/runtimeTextView"
                        style="@style/TextMovieDetails"
                        tools:text="Runtime: 89 min" />

                    <TextView
                        android:id="@+id/ratingTextView"
                        style="@style/TextMovieDetails"
                        tools:text="IMDB Rating: 8.0" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/descriptionCardView"
                style="@style/CardViewDefault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                app:contentPadding="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieDetailsLayout">

                <TextView
                    android:id="@+id/descriptionTextView"
                    style="@style/TextPlain"
                    tools:text="@string/lorem_ipsum_short" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

